--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@react-spring/three": "^9.5.2",
     "@react-three/drei": "^9.25.3",
     "@react-three/fiber": "^8.6.2",
+    "@react-three/postprocessing": "^2.6.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +17,6 @@
     "react-scripts": "5.0.1",
     "three": "^0.141.0",
     "three-stdlib": "^2.14.3",
-    "tween.js": "^16.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
