--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-spring/three": "^9.5.2",
     "@react-three/drei": "^9.32.4",
     "@react-three/fiber": "^8.6.2",
     "@react-three/postprocessing": "^2.6.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gsap": "^3.11.3",
     "leva": "^0.9.30",
     "postprocessing": "^6.28.7",
     "react": "^18.2.0",
